Not yet released
----------------
What is a "security.txt" file anyway?  You can read the full specification by
typing in:  Get-Help about_SecurityTxt

Version 1.3.1 -- November 23, 2022
----------------------------------
One little change made this module compatible with Windows PowerShell 5.1.
Previously, it could have been installed, but would not have fetched any files.

Version 1.3.0 -- November 23, 2022
----------------------------------
This version adds support for verifying PGP-signed "security.txt" files.  You
must have GnuPG installed;  PowerShell cannot provide this for you.

Canonicity is now a little more lax, to comply with the RFC.

Version 1.2.0 -- November 23, 2022
----------------------------------
This version adds a new cmdlet, Get-SecurityTxtFile!  There are also a few bug
fixes as well.

Version 1.1.0 -- October 25, 2022
---------------------------------
This version adds ShouldProcess support to New-SecurityTxtFile.

Version 1.0.1 -- June 22, 2021
------------------------------
This version fixed a packaging error when uploading the previous version to the
PowerShell Gallery.  There are no new features or bug fixes.

Version 1.0.0 -- June 22, 2021
------------------------------
This is the first public release of SecurityTxtToolkit.  While this version can
clear-sign files generated by New-SecurityTxtFile, it cannot check signatures on
existing files.  That will be added in a future release.